# server/src/models/Expense.ts
@@ -1,14 +1,14 @@
 export interface Expense {
-    id: string
-    date: string
-    amount: number
-    vendor: string
-    category_id: number
+  id: string;
+  date: Date;
+  amount: number;
+  vendor?: string | null;
+  category_id?: number | null;
 }
 
 export interface CreateExpenseRequest {
-    date?: string
-    amount: number
-    vendor: string
-    category_id: number
+  date?: string;
+  amount: number;
+  vendor: string;
+  category_id: number;
 }
